--- a/glide.yaml
+++ b/glide.yaml
@@ -4,6 +4,7 @@ import:
   subpackages:
   - client
 - package: github.com/hashicorp/terraform
+  version: ~0.9.2
   subpackages:
   - helper/resource
   - helper/schema
