--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/mattaitchison/terraform-provider-convox
+package: github.com/GetTerminus/terraform-provider-convox
 import:
 - package: github.com/convox/rack
   subpackages:
@@ -10,3 +10,10 @@ import:
   - helper/schema
   - plugin
   - terraform
+- package: github.com/Sirupsen/logrus
+  version: ^0.11.5
+  repo: https://github.com/sirupsen/logrus
+- package: github.com/onsi/ginkgo
+  version: ^1.2.0
+- package: github.com/onsi/gomega
+  version: master
