--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,6 @@
-package: github.com/GetTerminus/terraform-provider-convox
+---
+
+package: github.com/mattaitchison/terraform-provider-convox
 import:
 - package: github.com/convox/rack
   subpackages:
@@ -12,7 +14,7 @@ import:
   - terraform
 - package: github.com/Sirupsen/logrus
   version: ^0.11.5
-  repo: https://github.com/sirupsen/logrus
+  repo: git://github.com/sirupsen/logrus
 - package: github.com/onsi/ginkgo
   version: ^1.2.0
 - package: github.com/onsi/gomega
