--- a/glide.yaml
+++ b/glide.yaml
@@ -1,5 +1,3 @@
----
-
 package: github.com/mattaitchison/terraform-provider-convox
 import:
 - package: github.com/convox/rack
@@ -19,3 +17,7 @@ import:
   version: ^1.2.0
 - package: github.com/onsi/gomega
   version: master
+- package: github.com/davecgh/go-spew
+  version: ^1.1.0
+  subpackages:
+  - spew
